move db methods to database module
