# task-7/docs/swagger.json
@@ -16,7 +16,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/comments": {
+        "/restricted/comments": {
             "get": {
                 "produces": [
                     "application/json",
@@ -27,13 +27,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Comment"
+                            "$ref": "#/definitions/database.Comment"
                         }
                     }
                 }
             }
         },
-        "/comments/{id}": {
+        "/restricted/comments/{id}": {
             "get": {
                 "produces": [
                     "application/json",
@@ -53,13 +53,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Post"
+                            "$ref": "#/definitions/database.Post"
                         }
                     }
                 }
             }
         },
-        "/comments/{id}/delete": {
+        "/restricted/comments/{id}/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -82,13 +82,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Comment"
+                            "$ref": "#/definitions/database.Comment"
                         }
                     }
                 }
             }
         },
-        "/comments/{id}/edit": {
+        "/restricted/comments/{id}/edit": {
             "put": {
                 "produces": [
                     "application/json",
@@ -136,13 +136,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Comment"
+                            "$ref": "#/definitions/database.Comment"
                         }
                     }
                 }
             }
         },
-        "/posts": {
+        "/restricted/posts": {
             "get": {
                 "produces": [
                     "application/json",
@@ -153,13 +153,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Post"
+                            "$ref": "#/definitions/database.Post"
                         }
                     }
                 }
             }
         },
-        "/posts/add": {
+        "/restricted/posts/add": {
             "post": {
                 "produces": [
                     "application/json",
@@ -193,13 +193,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Post"
+                            "$ref": "#/definitions/database.Post"
                         }
                     }
                 }
             }
         },
-        "/posts/{id}": {
+        "/restricted/posts/{id}": {
             "get": {
                 "produces": [
                     "application/json",
@@ -219,13 +219,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Post"
+                            "$ref": "#/definitions/database.Post"
                         }
                     }
                 }
             }
         },
-        "/posts/{id}/comments": {
+        "/restricted/posts/{id}/comments": {
             "get": {
                 "produces": [
                     "application/json",
@@ -245,13 +245,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Comment"
+                            "$ref": "#/definitions/database.Comment"
                         }
                     }
                 }
             }
         },
-        "/posts/{id}/comments/add": {
+        "/restricted/posts/{id}/comments/add": {
             "post": {
                 "produces": [
                     "application/json",
@@ -292,13 +292,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Comment"
+                            "$ref": "#/definitions/database.Comment"
                         }
                     }
                 }
             }
         },
-        "/posts/{id}/delete": {
+        "/restricted/posts/{id}/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -321,13 +321,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Post"
+                            "$ref": "#/definitions/database.Post"
                         }
                     }
                 }
             }
         },
-        "/posts/{id}/edit": {
+        "/restricted/posts/{id}/edit": {
             "put": {
                 "produces": [
                     "application/json",
@@ -368,7 +368,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Post"
+                            "$ref": "#/definitions/database.Post"
                         }
                     }
                 }
@@ -376,7 +376,7 @@
         }
     },
     "definitions": {
-        "main.Comment": {
+        "database.Comment": {
             "type": "object",
             "properties": {
                 "body": {
@@ -397,7 +397,7 @@
                 }
             }
         },
-        "main.Post": {
+        "database.Post": {
             "type": "object",
             "properties": {
                 "body": {
